--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get to Know Andrea</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css"
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <script src="js/app.js"></script>
     <main>
         <header>
             <h1>Who Is Andrea?</h1>
@@ -17,6 +18,7 @@
         </header>
         <p>
             <h3>Bio</h3>
+            I'm Andrea, its nice to meet you. Let me tell you a bit about myself. I was born and raised in Philly with my younger sister, GO BIRDS!
         </p>
         <p>
             <h3>Education</h3>
