--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <h1>Who Is Andrea?</h1>
             <h2>...let's find out!</h2>
-        
+            <script>greeting();</script>
         </header>
         <p>
             <h3>Bio</h3>
