--- a/index.html
+++ b/index.html
@@ -22,15 +22,44 @@
         </p>
         <p>
             <h3>Education</h3>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
             I graduated from boarding school in the Philly suburbs. After high school I tried undergrad and community college on and off for 8ish years before calling it quits before I wasted too much more money. Now I'm here, ready to learn some new skills.
         </p>
         <p>
             <h3>Jobs</h3>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
             I started working in restaurants when I was 19. I've worked in a brewery, a country club, and countless others. I did a stint in retail at Nordstrom, that I loved, but life took me somewhere else. Before starting CodeFellows, I was working at an oceanfront restaurant. 
         </p>
         <p>
             <h3>Goals</h3>
             My goal is to move to Colorado in about four years. Hopefully by that time my sister and I will be able to start the process of getting our Italian citizenship. Eventually I want to buy property and move there. Hopefully with lots of adventures in between.
+        </p>
+        <p><h3>Top 10 Places I'd Like to Visit</h3>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+
         </p>
     </main>
     <footer>
