final touches for lab 5b

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get to Know Andrea</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 <body>
     <script src="js/app.js"></script>
     <main>
@@ -16,48 +15,46 @@
             <h2>...let's find out!</h2>
             <script>greeting();</script>
         </header>
-        <p>
-            <h3>Bio</h3>
-            I'm Andrea, its nice to meet you. Let me tell you a bit about myself. I'm lucky enough to live three blocks from the beach, but I was born and raised in Philly with my younger sister, GO BIRDS! I have two cats, who will probably wander on screen at some point. They're names are Axl Rose and Sid Vicious. 
+        <p id="bio">
+            <h3>My Bio</h3>
+            I'm Andrea, its nice to meet you. Let me tell you a bit about myself. I'm lucky enough to live three blocks from the beach, but I was born and raised in Philly with my younger sister, GO BIRDS! I have two cats, who will probably wander on screen at some point. They're names are Axl Rose and Sid Vicious.  
         </p>
-        <p>
+        <p id="list">
             <h3>Education</h3>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>George School</li>
+                <li>University of Pittsburgh</li>
+                <li>Montgomery County Community College</li>
+                <li>Peidmont Community College</li>
             </ul>
-            I graduated from boarding school in the Philly suburbs. After high school I tried undergrad and community college on and off for 8ish years before calling it quits before I wasted too much more money. Now I'm here, ready to learn some new skills.
-        </p>
+        </p id="list">
         <p>
             <h3>Jobs</h3>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Server at Philadelphia Cricket Club</li>
+                <li>Server at Iron Hill Brewery and Restaurant</li>
+                <li>Inventory Lead at Nordstrom Rack</li>
+                <li>Men's Sales at Nordstrom</li>
+                <li>Server Yard House</li>
+                <li>Server at Waterman's</li>
             </ul>
-            I started working in restaurants when I was 19. I've worked in a brewery, a country club, and countless others. I did a stint in retail at Nordstrom, that I loved, but life took me somewhere else. Before starting CodeFellows, I was working at an oceanfront restaurant. 
         </p>
         <p>
             <h3>Goals</h3>
             My goal is to move to Colorado in about four years. Hopefully by that time my sister and I will be able to start the process of getting our Italian citizenship. Eventually I want to buy property and move there. Hopefully with lots of adventures in between.
         </p>
-        <p><h3>Top 10 Places I'd Like to Visit</h3>
+        <p id="list"><h3>Favorite Book to Movie Adaptaions</h3>
             <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Pride and Pedjudice</li>
+                <li>Memoirs of a Geisha</li>
+                <li>Anne of Green Gables</li>
+                <li>Lord of the Rings Trilogy</li>
+                <li>The Princess Bride</li>
+                <li>10 Things I Hate About you</li>
+                <li>The Great Gatsby(1974)</li>
+                <li>Clueless</li>
+                <li>Stand By Me</li>
+                <li>The Witches</li>
             </ol>
 
         </p>
